# dual-link-smart-socket

./: .gitignore  AGENTS.md  AGENTS_ZH.md  CMakeLists.txt  LICENSE  README.md  sdkconfig.defaults
docs/: cc-export-202605241510.md
docs/agents/: architecture.md  build-and-debug.md  classes.md  coding-style.md  directory-structure.md  err.md  hardware_design.md  oop-design.md  review-checklist.md  serial_monitor.py
docs/agents/code-review/: _agent_instructions.md  review-list.md  (+30 more)
docs/interview-preparation/: bl0942.md  metering-module.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
main/app/: app_controller.c  app_controller.h  app_controller_internal.c  app_controller_internal.h
main/bl0942/: bl0942.c  bl0942.h
main/button/: button.c  button.h  button_iot_adapter.c  button_iot_adapter.h
main/display/lvgl/: lvgl_dashboard.c  lvgl_dashboard.h  lvgl_dashboard_internal.c  lvgl_dashboard_internal.h  lvgl_dashboard_timer_barrier.c  lvgl_dashboard_timer_barrier.h
main/display/tft/: tft_panel.c  tft_panel.h  tft_panel_st7789t.c  tft_panel_st7789t.h
main/metering/: metering_service.c  metering_service.h  metering_service_internal.c  metering_service_internal.h
main/network/: network_link.c  network_link.h  network_link_priv.h  network_manager.c  network_manager.h  network_types.h
main/network/lte/: lte_link.c  lte_link.h  lte_link_internal.c  lte_link_internal.h
main/network/wifi/: wifi_link.c  wifi_link.h  wifi_link_internal.c  wifi_link_internal.h
main/platform/: board_pinmap.c  board_pinmap.h
main/relay/: relay.c  relay.h
main/safety/: safety_guard.c  safety_guard.h
main/thingsboard/: thingsboard_client.c  thingsboard_client.h  thingsboard_client_internal.c  thingsboard_client_internal.h
test/host/: run_host_tests.sh  test_app_controller_event_order.c  test_app_controller_internal.c  test_bl0942_reset_locking.c  test_lte_link_internal.c  test_lte_link_lifecycle.c  test_lvgl_dashboard_timer_barrier.c  test_metering_service_event_flow.c  test_metering_service_internal.c  test_network_manager_preference.c  test_relay_event_order.c  test_tft_panel_st7789t_init.c  test_thingsboard_client_internal.c  test_thingsboard_client_lifecycle.c  test_wifi_link_internal.c
test/support/: esp_check.h  esp_err.h  esp_event.h  esp_lcd_panel_commands.h  esp_lcd_panel_io.h  esp_lcd_panel_ops.h  esp_lcd_types.h  esp_log.h  esp_timer.h  lwlte.h  mqtt_client.h  network_types.h  safety_guard.h
(+26 files in other folders)
