idf_component_register(
    SRCS
        "main.c"
        "platform/board_pinmap.c"
        "network/network_link.c"
        "network/wifi/wifi_link.c"
        "relay/relay.c"
        "button/button_iot_adapter.c"
        "button/button.c"
        "bl0942/bl0942.c"
        "metering/metering_service.c"
    INCLUDE_DIRS
        "."
        "platform"
        "network"
        "network/wifi"
        "relay"
        "button"
        "bl0942"
        "metering"
)
