idf_component_register(
    SRCS
        "main.c"
        "platform/board_pinmap.c"
        "network/network_link.c"
        "network/network_manager.c"
        "network/wifi/wifi_link.c"
        "relay/relay.c"
        "button/button_iot_adapter.c"
        "button/button.c"
        "bl0942/bl0942.c"
        "metering/metering_service.c"
        "safety/safety_guard.c"
        "display/tft/tft_panel.c"
        "display/tft/tft_panel_st7789t.c"
        "display/lvgl/lvgl_dashboard_internal.c"
        "display/lvgl/lvgl_dashboard.c"
    INCLUDE_DIRS
        "."
        "platform"
        "network"
        "network/wifi"
        "relay"
        "button"
        "bl0942"
        "metering"
        "safety"
        "display/tft"
        "display/lvgl"
)
