idf_component_register(
    SRCS
        "main.c"
        "app/app_controller_internal.c"
        "app/app_controller.c"
        "platform/board_pinmap.c"
        "network/network_link.c"
        "network/network_manager.c"
        "network/wifi/wifi_link.c"
        "network/lte/lte_link_internal.c"
        "network/lte/lte_link.c"
        "thingsboard/thingsboard_client_internal.c"
        "thingsboard/thingsboard_client.c"
        "relay/relay.c"
        "button/button_iot_adapter.c"
        "button/button.c"
        "bl0942/bl0942.c"
        "metering/metering_service.c"
        "safety/safety_guard.c"
        "display/tft/tft_panel.c"
        "display/tft/tft_panel_st7789t.c"
        "display/lvgl/lvgl_dashboard_internal.c"
        "display/lvgl/lvgl_dashboard.c"
    INCLUDE_DIRS
        "."
        "app"
        "platform"
        "network"
        "network/wifi"
        "network/lte"
        "thingsboard"
        "relay"
        "button"
        "bl0942"
        "metering"
        "safety"
        "display/tft"
        "display/lvgl"
)
